# insider_api_rust

./: .gitignore  Cargo.toml  README.md  useful_links.txt
api/: Cargo.toml
api/src/: api_errors.rs  main.rs  settings.rs
api/src/api_routes/: mod.rs  routes.rs
database_handler/: Cargo.toml  migration_commands.txt
database_handler/migrations - Copy - Copy/2022-06-10-110028_stock_data/: down.sql  up.sql
database_handler/migrations - Copy - Copy/2022-06-10-110032_json_docs/: down.sql  up.sql
database_handler/migrations - Copy - Copy/2022-06-10-110037_all_filings/: down.sql  up.sql
database_handler/migrations - Copy - Copy/2022-06-10-110041_all_insiders/: down.sql  up.sql
database_handler/migrations - Copy - Copy/2022-06-10-110044_insider_roles/: down.sql  up.sql
database_handler/migrations - Copy - Copy/2022-06-14-030859_filings_data/: down.sql  up.sql
database_handler/migrations/2022-06-10-110028_stock_data/: down.sql  up.sql
database_handler/migrations/2022-06-10-110032_json_docs/: up.sql
database_handler/migrations/2022-06-10-110037_all_filings/: up.sql
database_handler/migrations/2022-06-10-110041_all_insiders/: up.sql
database_handler/migrations/2022-06-10-110044_insider_roles/: down.sql  up.sql
database_handler/migrations/2022-06-10-110048_d_holdings/: down.sql  up.sql
database_handler/migrations/2022-06-10-110050_d_transactions/: down.sql  up.sql
database_handler/migrations/2022-06-10-110053_nd_holdings/: down.sql  up.sql
database_handler/migrations/2022-06-10-110057_nd_transactions/: down.sql  up.sql
database_handler/migrations/2022-06-10-110101_filings_other/: down.sql  up.sql
database_handler/migrations/2022-06-14-033431_stock_data/: up.sql
database_handler/migrations/2022-06-14-033440_json_docs/: down.sql  up.sql
database_handler/migrations/2022-06-14-033446_all_filings/: down.sql  up.sql
database_handler/migrations/2022-06-14-033501_all_insiders/: down.sql  up.sql
database_handler/migrations/2022-06-14-033508_insider_roles/: up.sql
database_handler/migrations/2022-06-14-033513_filings_data/: down.sql  up.sql
database_handler/src/: database.rs  database_errors.rs  lib.rs  schema.rs  settings.rs
database_handler/src/models/: all_filings.rs  all_insiders.rs  d_holdings.rs  d_transaction.rs  filings_data.rs  filings_other.rs  mod.rs  (+7 more)
request_handler/: Cargo.toml
request_handler/src/: lib.rs
scraper/: Cargo.toml
scraper/src/: default_stock_data.json  example.json  json_requests.rs  main.rs  settings.rs
(+24 files in other folders)
