[package]
name = "api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared_lib = { path = "../shared_lib" }

actix-web = "4"
diesel = "1.4.8"
listenfd = "0.3"

log = "0.4.0"
env_logger = "0.9.0"
serde = "1.0"
serde_json = "1.0"
