[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
shared_lib = { path = "../shared_lib" }
database_handler = { path = "../database_handler" }

log = "0.4.0"
env_logger = "0.9.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
diesel = { version = "1.4.8", features = ["postgres", "r2d2"] }
diesel_migrations = "1.4.0"
r2d2 = "0.8.9"
lazy_static = "1.4"
actix-web = "4.0.1"
actix-rt = "1.0"
listenfd = "0.3"
thiserror = "1.0.31"