[package]
name = "database_handler"
version = "0.1.0"
edition = "2021"

[dependencies]
diesel = { version = "1.4.8", features = ["postgres", "r2d2"] }
diesel_migrations = "1.4.0"
r2d2 = "0.8.9"
lazy_static = "1.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4.0"
thiserror = "1.0.31"