[package]
name = "request_handler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared_lib = { path = "../shared_lib" }

log = "0.4.0"
hyper = { version = "0.14", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hyper-tls = "0.5.0"
async-trait = "0.1.53"
thiserror = "1.0.31"
futures = "0.3.19"
url = "1.7.2"
tokio = { version = "1.19.2", features = ["full"] }
anyhow = "1.0.57"
