[package]
name = "scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
shared_lib = { path = "../shared_lib" }
request_handler = { path = "../request_handler" }
database_handler = { path = "../database_handler" }

log = "0.4.0"
thiserror = "1.0.31"
hyper = { version = "0.14", features = ["full"] }
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0.81"
hyper-tls = "0.5.0"
tokio = { version = "1.19.2", features = ["full"] }
async-trait = "0.1.53"
chrono = "0.4"
anyhow = "1.0.57"
